--- a/client/style.css
+++ b/client/style.css
@@ -36,16 +36,34 @@
     margin: 10px;
     overflow-y: scroll;
 }
-.outBubble{
+.chatBubbleBlue{
     display: flex;
+    justify-content:  flex-end;
     flex-direction: row;
-    justify-content: flex-end;
-    margin: 5px;
     width: 100%;
 }
-.outMsg{
+.chatBubbleGrey{
+    display: flex;
+    flex-direction: row;
+    justify-content:  flex-start;
+    width: 100%;
+}
+
+.outputBlueMsg{
+    margin: 5px;
     padding: 10px;
     background-color: rgb(0, 119, 255);
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+    max-width: 30%;
+    word-wrap: break-word;
+}
+
+.outputGreyMsg{
+    margin: 5px;
+    padding: 10px;
+    background-color: rgb(73, 73, 73);
     border-radius: 10px;
     color: white;
     font-weight: bold;
