--- a/client/style.css
+++ b/client/style.css
@@ -9,13 +9,16 @@
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    background-color: black;
 }
-
+.headerChatt{
+    color: white;
+}
 .chatConBox{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    border: 2px solid black;
+    border: 2px solid white;
     width: 50%;
     height: 40%;
 }
@@ -63,10 +66,43 @@
 .outputGreyMsg{
     margin: 5px;
     padding: 10px;
-    background-color: rgb(73, 73, 73);
+    background-color: rgb(134, 134, 134);
     border-radius: 10px;
     color: white;
     font-weight: bold;
     max-width: 30%;
     word-wrap: break-word;
+}
+
+
+.landingCon{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0);
+    height: 100vh;
+}
+.landHead{
+    color:white;
+    font-size: 60px;
+}
+.landHead2{
+    color:white;
+    font-size: 30px;
+}
+.nickInput{
+
+    font-size: 30px;
+    background-color: black;
+    color:white;
+    border:none;
+    text-align: center;
+}
+.nickBtn{
+    cursor: not-allowed;
+    font-size: 30px;
+    background-color: transparent;
+    color:black;
+    border:none;
 }
