--- a/client/style.css
+++ b/client/style.css
@@ -37,7 +37,6 @@
     flex-direction: column;
     align-items: flex-end;
     margin: 10px;
-    min-height: 50%;
     overflow-y: auto;
 }
 .chatBubbleBlue{
@@ -112,15 +111,15 @@
 
 .gifCon{
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
-    max-height: 60%;
-    overflow-x: scroll;
+    max-height: 55%;
+    overflow-y: auto;
 }
 .gifImgDiv{
-    width: 30%;
-    height: 100%;
+    width: 25%;
 }
 .gifs{
     width: 100%;
