--- a/client/style.css
+++ b/client/style.css
@@ -124,3 +124,13 @@
 .gifs{
     width: 100%;
 }
+
+
+.isWritingBox {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 40%;
+    color: white;
+
+}
