--- a/client/style.css
+++ b/client/style.css
@@ -11,6 +11,22 @@
     height: 100vh;
     background-color: black;
 }
+.container2{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.container3{
+    height: 50%;
+    min-width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 2px solid white;
+}
 .headerChatt{
     color: white;
 }
@@ -136,8 +152,9 @@
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
-    max-height: 55%;
+    max-height: 20%;
     overflow-y: auto;
+
 }
 
 .emojiImgDiv{
@@ -163,11 +180,11 @@
 
 .roomCon{
     display:flex;
-    flex-direction:row;
+    flex-direction:column;
     justify-content: space-between;
-    border: 2px solid white;
-    min-width: 40%;
-    min-height: 20%;
+    overflow-y:auto ;
+    min-width: 20%;
+    min-height: 50%;
 }
 
 
@@ -204,13 +221,19 @@
     padding: 10px;
 }
 .userBoxCon{
-    border: solid white 2px;
+    overflow-y:auto ;
     min-width: 20%;
-    min-height: 20%;
+    min-height: 50%;
     padding:20px;
+    overflow-y: auto;
 
 }
 .userBox{
     font-weight: bold;
     font-size: 20px;
+    margin: 5px;
+}
+.userTitle{
+    color:white;
+    margin: 5px;
 }
